# longevity-backend-test-task

./: README.md  docker-compose.yml
server/: pyproject.toml
server/config/: asgi.py  wsgi.py
server/config/settings/: settings.py
